--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                         <div id="setup-screen">
                             <h3 class="text-center mb-3">Select Difficulty</h3>
                             <select id="difficulty" class="form-select mb-3">
-                                <option value="easy">Easy (1-5)</option>
-                                <option value="medium">Medium (1-10)</option>
-                                <option value="hard">Hard (1-12)</option>
+                                <option value="easy">Easy (practicing 1, 2, 5)</option>
+                                <option value="medium">Medium (practicing 3, 6)</option>
+                                <option value="hard">Hard (practicing 7, 8, 9)</option>
                             </select>
                             <button id="start-btn" class="btn btn-primary w-100">Start Game</button>
                         </div>
@@ -28,7 +28,10 @@
                         <div id="game-screen" class="d-none">
                             <div class="d-flex justify-content-between mb-3">
                                 <div>Score: <span id="score">0</span></div>
-                                <div>Time: <span id="timer">0</span>s</div>
+                                <div>Time: <span id="timer">60</span>s</div>
+                            </div>
+                            <div class="progress mb-3">
+                                <div id="timer-progress" class="progress-bar" role="progressbar" style="width: 100%"></div>
                             </div>
 
                             <div class="problem-container text-center mb-4">
